@@ -11,8 +11,12 @@ AGENT_PATH=/root/dists/mesh-agent.jar
 if [[ "$1" == "consumer" ]]; then
   echo "Starting consumer agent..."
   java -jar \
+       -server \
        -Xms1536M \
        -Xmx1536M \
+       -XX:+UseNUMA \
+       -XX:+UseCondCardMark \
+       -XX:-UseBiasedLocking \
        -DRUN_TYPE=consumer \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2551 \
@@ -25,6 +29,9 @@ elif [[ "$1" == "provider-small" ]]; then
   java -jar \
        -Xms512M \
        -Xmx512M \
+       -XX:+UseNUMA \
+       -XX:+UseCondCardMark \
+       -XX:-UseBiasedLocking \
        -DRUN_TYPE=provider-small \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2552 \
@@ -40,6 +47,9 @@ elif [[ "$1" == "provider-medium" ]]; then
   java -jar \
        -Xms1536M \
        -Xmx1536M \
+       -XX:+UseNUMA \
+       -XX:+UseCondCardMark \
+       -XX:-UseBiasedLocking \
        -DRUN_TYPE=provider-medium \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2553 \
@@ -55,6 +65,9 @@ elif [[ "$1" == "provider-large" ]]; then
   java -jar \
        -Xms2560M \
        -Xmx2560M \
+       -XX:+UseNUMA \
+       -XX:+UseCondCardMark \
+       -XX:-UseBiasedLocking \
        -DRUN_TYPE=provider-large \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2554 \
